{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 4,
  "lineage": "2d104a6b-1e20-9082-0c18-b7aff7366a27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-085d69a76707542b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-099ed29049610b0e5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "RDP from approved bastion security group sg-085d69a76707542b2 - Security Autopilot",
            "from_port": 3389,
            "id": "sgr-099ed29049610b0e5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-085d69a76707542b2",
            "security_group_id": "sg-0ef32ca8805a55a8b",
            "security_group_rule_id": "sgr-099ed29049610b0e5",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-085d69a76707542b2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:696505809372:security-group-rule/sgr-0d8837460036a325e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SSH from approved bastion security group sg-085d69a76707542b2 - Security Autopilot",
            "from_port": 22,
            "id": "sgr-0d8837460036a325e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-085d69a76707542b2",
            "security_group_id": "sg-0ef32ca8805a55a8b",
            "security_group_rule_id": "sgr-0d8837460036a325e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    }
  ]
}